Изменение синтаксиса цикла do while;

--- a/ui/main.htm
+++ b/ui/main.htm
@@ -634,13 +634,14 @@ do
 {
     Математическое выражение
 }
-while(<span class="text-danger">Аргумент</span> <span class="text-success">Операция сравнения или логическая операция</span> <span class="text-danger">Аргумент</span>)
+while(<span class="text-danger">Аргумент</span> <span class="text-success">Операция сравнения или логическая операция</span> <span class="text-danger">Аргумент</span>);
                             </pre>
                             <div class="note">
                                 <ol>
                                     <li>Несколько конструкций "<span class="text-danger">Аргумент</span> <span class="text-success">Операция сравнения</span> <span class="text-danger">Аргумент</span>" могут объединяться с помощью логических операторов (и - &amp;&amp; или - ||).</li>
                                     <li>Максимальное количество итераций цикла по умолчанию <b>65535d</b>(<b>0xffffh</b>). Можно изменить с помощью директивы "<b>loop_limit</b>".</li>
                                     <li>Для выход из цикла может использоваться оператор <b>break</b>.</li>
+                                    <li>объявление цикла должно заканчиваться символом "точка с запятой" (<b>;</b>).</li>
                                 </ol>
                             </div>
                         </div>
